# resource-id

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE.txt  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build.yml  dependency-audit.yml  release-package.yml  scorecard.yml  tests.yml  tox.yml  zizmor.yml
scripts/: resolve_action_uses.py
src/resource_id/: __init__.py  litestar.py  resource_id.py
tests/: test_litestar.py  test_resource_id.py
