[metadata]
name = resource-id
author = Charles Yeomans

[options]
package_dir=
    =src
packages=find:
install_requires =
    typing_extensions; python_version<"3.10"
    importlib-metadata; python_version<"3.8"

include_package_data = True


[options.packages.find]
where=src

[options.package_data]
* = py.typed
