[metadata]
name = resource-id
author = Charles Yeomans
author_email = charles@declaresub.com
description = Base62-encoded identifier.
long_description = A base62-encoded identifier for use in URLs.  Supports Pydantic validation.
url = https://github.com/declaresub/resource-id
license = MIT
keywords = identifier, url, base62
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Framework :: FastAPI
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Typing :: Typed
platforms = any

[options]
package_dir=
    =src
packages=find:
install_requires =
    typing_extensions; python_version<"3.10"
    pydantic<3

include_package_data = True

[options.packages.find]
where=src

[options.package_data]
* = py.typed
